Fix annoying horizontal scroll

--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@ body {
   margin: 0;
   color: white;
   font-family: Helvetica, Arial, sans-serif;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 a {
